--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ domain: 5dpo.github.io
 url: https://5dpo.github.io
 baseurl: 
 twitter_username: 
-github_username: 5dpomsl
+github_username: 5dpo
 
 # Build settings
 theme: minima
