--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
-_site
-.sass-cache
+*.gem
+.bundle
+.ruby-version
 .jekyll-cache
 .jekyll-metadata
+.sass-cache
 vendor
+_site
+Gemfile.lock
+node_modules
+.DS_Store
