--- a/_config.yml
+++ b/_config.yml
@@ -157,7 +157,7 @@ gh_edit_link_text: "Edit this page on GitHub"
 gh_edit_repository: "https://github.com/5dpo/5dpo.github.io" # the github URL for your repo
 gh_edit_branch: "gh-pages" # the branch that your docs is served from
 # gh_edit_source: docs # the source that your files originate from
-gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
+gh_edit_view_mode: "edit" # "tree" or "edit" if you want the user to jump into the editor immediately
 
 
 
@@ -205,3 +205,5 @@ compress_html:
   profile: false
   # ignore:
   #   envs: all
+
+github: [metadata]
