Test posts generation

--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,8 @@ github_username: "5dpo"
 
 # Build settings
 theme: just-the-docs
+plugins:
+  - jekyll-feed
 
 exclude:
 # from https://github.com/jekyll/jekyll/blob/master/lib/site_template/_config.yml:
